--- a/WEB_SCRAPPING.ipynb
+++ b/WEB_SCRAPPING.ipynb
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 151,
       "metadata": {
         "id": "hSCfjlgHggqz"
       },
@@ -73,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 152,
       "metadata": {
         "id": "q2NZPFo_gxGc"
       },
@@ -95,13 +95,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 153,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DHHwV6EkhXad",
-        "outputId": "487a4f63-6450-4ec5-b971-4e398fd44e88"
+        "outputId": "5e437f45-c427-43fc-c053-e15293f80bb9"
       },
       "outputs": [
         {
@@ -2404,13 +2404,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 154,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "TvtQjWigha9A",
-        "outputId": "b145d4a3-1290-49a9-8f18-0cb265466de3"
+        "outputId": "d72e1d74-b4cd-4e51-e382-0e0253945abd"
       },
       "outputs": [
         {
@@ -3938,7 +3938,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 73
+          "execution_count": 154
         }
       ],
       "source": [
@@ -3947,13 +3947,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 121,
+      "execution_count": 155,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KE5rwjBdqAjT",
-        "outputId": "8a79b485-35f9-4b4b-a271-dcc1693dff2d"
+        "outputId": "6c8ca0a0-5047-445f-bbf9-0b3ed797e516"
       },
       "outputs": [
         {
@@ -5481,7 +5481,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 121
+          "execution_count": 155
         }
       ],
       "source": [
@@ -5490,13 +5490,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 156,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "CTaegPtQqmEd",
-        "outputId": "11263b7c-d886-4017-cff9-87938668810c"
+        "outputId": "4763cebe-6410-4919-bc1a-2276941bf314"
       },
       "outputs": [
         {
@@ -7270,7 +7270,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 96
+          "execution_count": 156
         }
       ],
       "source": [
@@ -7279,13 +7279,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 122,
+      "execution_count": 157,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "sWZ-UhmoZQOW",
-        "outputId": "67e3ffc1-6c9d-4201-d8fb-f641d9a425b5"
+        "outputId": "c23854a9-9e31-42fd-b823-0418d169eebf"
       },
       "outputs": [
         {
@@ -8820,7 +8820,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 123,
+      "execution_count": 158,
       "metadata": {
         "id": "fxdXANyPZbmd"
       },
@@ -8840,9 +8840,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s7sqInsdAxvr",
-        "outputId": "343ac17f-f59b-47e5-aa31-9201a1c34f1e"
+        "outputId": "3598d4f1-7cdd-4193-f25d-095c0ba72778"
       },
-      "execution_count": 124,
+      "execution_count": 159,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8865,20 +8865,28 @@
             ]
           },
           "metadata": {},
-          "execution_count": 124
+          "execution_count": 159
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "source": [
+        "# Extract the text from each element in the 'world_table_titles' list,\n",
+        "# strip any leading/trailing whitespace, and store the cleaned titles back in the same list.\n",
+        "world_table_titles = [tittle.text.strip() for tittle in world_table_titles]\n",
+        "\n",
+        "# Print the list of cleaned world table titles to the console.\n",
+        "print(world_table_titles)"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "PVel2KzPZ0im",
-        "outputId": "28b1d4ee-b77c-4c79-c87d-f0f97d383dec"
+        "id": "SkqRJS-nG4w4",
+        "outputId": "ae628719-c301-47d9-d5d2-db3f5c2b3289"
       },
+      "execution_count": 160,
       "outputs": [
         {
           "output_type": "stream",
@@ -8887,23 +8895,35 @@
             "['Rank', 'Name', 'Industry', 'Revenue (USD millions)', 'Revenue growth', 'Employees', 'Headquarters']\n"
           ]
         }
-      ],
-      "source": [
-        "world_table_titles = [tittle.text.strip() for tittle in world_table_titles]\n",
-        "print(world_table_titles)"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 126,
+      "cell_type": "markdown",
+      "source": [
+        "The above code is used to clean up the text content from an HTML element list (probably table headers) by removing any unnecessary spaces, and then printing the result."
+      ],
       "metadata": {
-        "id": "ygV8LnrNaeFs",
+        "id": "kqfgr4vFHkMg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create an empty pandas DataFrame with column names set to the values from the 'world_table_titles' list.\n",
+        "df = pd.DataFrame(columns = world_table_titles)\n",
+        "\n",
+        "# Display the empty DataFrame to verify that the columns have been correctly set.\n",
+        "df\n"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 89
         },
-        "outputId": "5aee8c99-2cb3-49c1-e02a-f6f820d835b9"
+        "id": "mgISfE_yH2tZ",
+        "outputId": "2a1c63cb-038e-4958-853b-3696d42dc9f3"
       },
+      "execution_count": 161,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8915,7 +8935,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-514c848b-f6d3-44cf-991d-b04e5054c13a\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e29be4af-b916-46ff-a340-30652c5fa9ab\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -8950,7 +8970,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-514c848b-f6d3-44cf-991d-b04e5054c13a')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e29be4af-b916-46ff-a340-30652c5fa9ab')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -9002,12 +9022,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-514c848b-f6d3-44cf-991d-b04e5054c13a button.colab-df-convert');\n",
+              "        document.querySelector('#df-e29be4af-b916-46ff-a340-30652c5fa9ab button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-514c848b-f6d3-44cf-991d-b04e5054c13a');\n",
+              "        const element = document.querySelector('#df-e29be4af-b916-46ff-a340-30652c5fa9ab');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -9027,7 +9047,7 @@
               "  </div>\n",
               "\n",
               "\n",
-              "  <div id=\"id_62d29e63-de16-4aa2-9069-8721b130b148\">\n",
+              "  <div id=\"id_8feadb19-177b-4929-9d6c-6389cb415e81\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -9071,7 +9091,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_62d29e63-de16-4aa2-9069-8721b130b148 button.colab-df-generate');\n",
+              "        document.querySelector('#id_8feadb19-177b-4929-9d6c-6389cb415e81 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -9092,45 +9112,79 @@
             }
           },
           "metadata": {},
-          "execution_count": 126
+          "execution_count": 161
         }
-      ],
-      "source": [
-        "df = pd.DataFrame(columns = world_table_titles)\n",
-        "df"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The above code initializes a DataFrame with the column headers derived from the world_table_titles list. The DataFrame is empty initially, with no data, but the columns are named."
+      ],
+      "metadata": {
+        "id": "j5uqhMPkHvTM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "From what I understood from the data here is my key:\n",
+        "\n",
+        "**th** - Table Heading\n",
+        "\n",
+        "**td** - Table Data\n",
+        "\n",
+        "**tr** - Table Rows"
+      ],
+      "metadata": {
+        "id": "bn4mjceaEsbj"
+      }
     },
     {
       "cell_type": "code",
       "source": [
+        "# Find all the table rows elements within the HTML table and store them in column_data.\n",
+        "# Each <tr> (table row) represents a row in the table, which can contain either headers (<th>) or data cells (<td>).\n",
         "column_data = table.find_all('tr')"
       ],
       "metadata": {
-        "id": "bw7A9gVjyxUn"
+        "id": "ga3TANLYGVXY"
       },
-      "execution_count": 127,
+      "execution_count": 162,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# Iterate through each row of the HTML table, skipping the first row (header).\n",
         "for row in column_data[1:]:\n",
+        "\n",
+        "  # Find all the <td> elements (table data) within the current row.\n",
         "  row_data = row.find_all('td')\n",
+        "\n",
+        "  # Extract the text from each <td> element, strip any leading/trailing whitespace,\n",
+        "  # and store it as a list representing the current row of data.\n",
         "  individual_row_data = [data.text.strip() for data in row_data]\n",
+        "\n",
+        "  # Get the current length of the DataFrame, which will be used as the index\n",
+        "  # for inserting the new row.\n",
         "  length = len(df)\n",
+        "\n",
+        "  # Add the extracted row data as a new row in the DataFrame at the next available index.\n",
         "  df.loc[length] = individual_row_data\n",
         "\n",
-        "df.head()"
+        "# Display the first few rows of the DataFrame to ensure the data has been added correctly.\n",
+        "df.head()\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "id": "PT1P8UFly42J",
-        "outputId": "259e66d5-e7c0-4db1-8179-6c5e58f53aff"
+        "id": "aqCk2WC4Fy-B",
+        "outputId": "83cc95a6-d315-4810-944f-8b92478ca7b8"
       },
-      "execution_count": 131,
+      "execution_count": 163,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9152,7 +9206,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4df67472-a4f5-47ea-b6ff-27aa0833da76\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-2b1c683b-0c37-4d5f-b226-79fb2c9706ad\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -9237,7 +9291,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4df67472-a4f5-47ea-b6ff-27aa0833da76')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2b1c683b-0c37-4d5f-b226-79fb2c9706ad')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -9289,12 +9343,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-4df67472-a4f5-47ea-b6ff-27aa0833da76 button.colab-df-convert');\n",
+              "        document.querySelector('#df-2b1c683b-0c37-4d5f-b226-79fb2c9706ad button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-4df67472-a4f5-47ea-b6ff-27aa0833da76');\n",
+              "        const element = document.querySelector('#df-2b1c683b-0c37-4d5f-b226-79fb2c9706ad');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -9314,8 +9368,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-38ec902f-e042-45b1-9162-1789b6b6df93\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-38ec902f-e042-45b1-9162-1789b6b6df93')\"\n",
+              "<div id=\"df-b19f7ad4-eac0-49fb-9422-ce7c40f15dac\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b19f7ad4-eac0-49fb-9422-ce7c40f15dac')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -9434,7 +9488,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-38ec902f-e042-45b1-9162-1789b6b6df93 button');\n",
+              "        document.querySelector('#df-b19f7ad4-eac0-49fb-9422-ce7c40f15dac button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -9451,7 +9505,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 131
+          "execution_count": 163
         }
       ]
     },
@@ -9464,14 +9518,14 @@
       "metadata": {
         "id": "mlgCB6v12O53"
       },
-      "execution_count": 132,
+      "execution_count": 165,
       "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOih3AQTUKp7jyuxF58BF2z",
+      "authorship_tag": "ABX9TyO4y41nNJ1abB3LZUZIXXky",
       "include_colab_link": true
     },
     "kernelspec": {
