--- a/SAMUEL_EMMANUEL_KIMARO.ipynb
+++ b/SAMUEL_EMMANUEL_KIMARO.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPJ/2U1DIaaKhKZQTEzAvJp",
+      "authorship_tag": "ABX9TyO+liFZCzqQWXx63AYVV570",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6790,6 +6790,15 @@
           "execution_count": 24
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# T**O THE ONES WHO WILL VIEW THIS THE PROJECT IS NOT COMPLETE FOR NOW **"
+      ],
+      "metadata": {
+        "id": "rLdX6IFJOnXz"
+      }
     }
   ]
 }
